--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <td><img src="https://footgo-league.com/viewFile/d1e7914a-487a-4760-ad71-79dd1c1101d6" width="180" alt="тут мала бути моя фотка"></td>
     <td>
-        <h1> <em> Андрій Личак</em></h1>
+        <h1> <em> Andrii Lychak</em></h1>
         <p>Я випускник університету <strong>"Львівська Політехніка"</strong></p>
         <p>Ніфіга не шарю в програмуванні, але по відеуроках,які я залишу внизу в посиланні, з горем пополам написав це!</p>
         </td>
